# cson-forge

./: .gitignore  README.md  dev-setup.sh  environment.yml  myst.yml  pyproject.toml
.github/workflows/: tests.yml
cson_forge/: __init__.py  _core.py  catalog.py  compute.py  config.py  input_data.py  machines.yml  models.py  models.yml  nb_engine.py  parsers.py
cson_forge/diagnostics/: __init__.py
docs/: CStarSpecBuilder-overview.md  installation.md  machine-config.md
tests/: test_config.py  test_core.py  test_dev_setup.py  test_input_data.py  test_models_comprehensive.py  test_parsers.py
tests/fixtures/: cson_roms-marbl_v0-1_ccs-12km_70procs_20240101-20240102.out  slurm-sacct-jobid.json
workflows/: _source_data.ipynb  analysis_cson-plot.ipynb  analysis_index.md  builds.yml  catalog.py  config.py  cson-domain_wio-toy.ipynb  cson-domains-plot.ipynb  cson_forge.py  docs_api-ref.md  docs_catalog.ipynb  docs_configuration.md  docs_grid-making.md  docs_installation.md  docs_models.md  docs_overview.md  docs_source-data.md  domain_gulf-guinea-toy.ipynb  domain_wio-toy.ipynb  grid_california-current-system.ipynb  grid_gulf-guinea-toy.ipynb  grid_hvalfjörður-iceland.ipynb  grid_index.md  grid_source-data.ipynb  grid_wio-toy.ipynb  model_build.py  model_config.py  models.yml  source_data.py  util.py
workflows/blueprints/: model-inputs_gulf-guinea-toy.yml  model-inputs_wio-toy.yml
workflows/computing-benchmarks/: benchmark-scaling-plot.ipynb  benchmark_scaling.py  domains-bm-scaling-no-bgc.yml  run-benchmark-scaling.sh
workflows/logs/: build.ROMS
(+376 files in other folders)
